# Explore

./: .gitignore  README.md
ContestPlatform/: payoff.csv  prob.csv  protos_cmd.sh
ContestPlatform/contest/cpp_client/: CMakeLists.txt  client_main.cpp
ContestPlatform/etc/: client.xml  multi_clients.xml  server.xml
ContestPlatform/peacock/: __init__.py  __main__.py
ContestPlatform/peacock_scripts/: peacock.sh  pressure_test_pb.sh  run.sh  start_all_broker.sh
ContestPlatform/script/: cpp_clinet_protos_cmd.sh  protos_cmd.sh  test_perf.sh
FileSyncer/: pom.xml
MyAwesomeApp/app/: build.gradle
R_WorkSpace/learning/: array_demo.R  basic.R  condition_flow.R  data_type.R  dataframe_demo.R  factor_demo.R  list_demo.R  matrix_demo.R  operators.R  string_demo.R  vector_demo.R
boost_python/: CMakeLists.txt
boost_python/cpp_used_by_python/: CMakeLists.txt
boost_python/python_used_by_cpp/: CMakeLists.txt  Make.defaults  Makefile  example.cpp  example.py
design_pattern/: pom.xml  tmp.txt
lsp/: README.md
lsp/conf/: page_size.cpp
lsp/io/: truncate.cpp
lsp/memory/: alignment.cpp  allocate.cpp  allocate_in_stack.cpp  anonymous_mmap.cpp
lsp/network/: README.md
lsp/thread/: detach.cpp  mutex.cpp  pthread.cpp
lsp/time/: sleep.cpp  time_stringfy.cpp  wall_time.cpp
lua/core/: data_type.lua  if.lua  string.lua  variables.lua
lua/cpp/: add.lua  main.cpp
lua/io/: readme
lua/misc/: comments.lua  gc.lua
lua/oo/: class.lua  inheritance.lua  set.lua
lua/std/: convert.lua  global.lua  math_lib.lua  time.lua
perl/: main.pl  readme
perl/cli/: cpan.sh  (+3 more)
(+708 files in other folders)
